correction de bug, ajout de feedbacks et synchro des clients